RESOLVED FIXED148198
CMake Windows build should not include files directly from other Source directories
https://bugs.webkit.org/show_bug.cgi?id=148198
Summary CMake Windows build should not include files directly from other Source direc...
Alex Christensen
Reported 2015-08-19 15:46:07 PDT
Directories are made separately. Forwarding headers should have everything needed to make the next projects.
Attachments
Patch (29.59 KB, patch)
2015-08-19 16:05 PDT, Alex Christensen
no flags
Patch (30.73 KB, patch)
2015-08-19 16:29 PDT, Alex Christensen
no flags
Patch (31.15 KB, patch)
2015-08-19 17:15 PDT, Alex Christensen
bfulgham: review+
Alex Christensen
Comment 1 2015-08-19 16:05:46 PDT
Alex Christensen
Comment 2 2015-08-19 16:29:18 PDT
Alex Christensen
Comment 3 2015-08-19 17:15:23 PDT
Brent Fulgham
Comment 4 2015-08-19 17:51:42 PDT
Comment on attachment 259432 [details] Patch r=me.
Alex Christensen
Comment 5 2015-08-27 14:17:31 PDT
Note You need to log in before you can comment on or make changes to this bug.