CMake Windows build should not include files directly from other Source directories https://bugs.webkit.org/show_bug.cgi?id=148198

Reviewed by Brent Fulgham.

.:

* Source/cmake/WebKitMacros.cmake:

Source/JavaScriptCore:

* CMakeLists.txt:
JavaScriptCore_FORWARDING_HEADERS_FILES is no longer necessary because all the headers
that used to be in it are now in JavaScriptCore_FORWARDING_HEADERS_DIRECTORIES
* PlatformEfl.cmake:
* PlatformGTK.cmake:
* PlatformMac.cmake:
* PlatformWin.cmake:

Source/WebCore:

* CMakeLists.txt:
* PlatformEfl.cmake:
* PlatformGTK.cmake:
* PlatformWin.cmake:

Source/WebKit:

* CMakeLists.txt:
* PlatformWin.cmake:

Source/WebKit/win:

* WebKitPrefix.h:
Include cmakeconfig.h to properly define all enabled features.

Source/WTF:

* wtf/CMakeLists.txt:
* wtf/PlatformWin.cmake:

Tools:

* DumpRenderTree/DumpRenderTreePrefix.h:
Include cmakeconfig.h to properly define all enabled features.
* DumpRenderTree/PlatformWin.cmake:
* TestWebKitAPI/PlatformWin.cmake:



Canonical link: https://commits.webkit.org/166327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188673 268f45cc-cd09-0410-ab3c-d52691b4dbfc