Source/JavaScriptCore/PlatformWin.cmake
@@ -35,4 +35,15 @@ file(COPY
     ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
 )
 
+foreach (_directory ${JavaScriptCore_FORWARDING_HEADERS_DIRECTORIES})
+    file(GLOB _files "${JAVASCRIPTCORE_DIR}/${_directory}/*.h")
+    foreach (_file ${_files})
+        file(COPY ${_file} DESTINATION "${DERIVED_SOURCES_DIR}/ForwardingHeaders/JavaScriptCore")
+    endforeach ()
+endforeach ()
+
+set(JavaScriptCore_POST_BUILD_COMMAND "${CMAKE_BINARY_DIR}/DerivedSources/JavaScriptCore/postBuild.cmd")
+file(WRITE "${JavaScriptCore_POST_BUILD_COMMAND}" "@xcopy /y /d /f \"${DERIVED_SOURCES_DIR}/JavaScriptCore/*.h\" \"${DERIVED_SOURCES_DIR}/ForwardingHeaders/JavaScriptCore\" >nul 2>nul\n@xcopy /y /d /f \"${DERIVED_SOURCES_DIR}/JavaScriptCore/inspector/*.h\" \"${DERIVED_SOURCES_DIR}/ForwardingHeaders/JavaScriptCore\" >nul 2>nul\n")
+file(MAKE_DIRECTORY ${DERIVED_SOURCES_DIR}/ForwardingHeaders/JavaScriptCore)
+
 set(JavaScriptCore_OUTPUT_NAME JavaScriptCore${DEBUG_SUFFIX})
