Source/WTF/wtf/PlatformWin.cmake
@@ -29,6 +29,10 @@ list(APPEND WTF_HEADERS
     "${DERIVED_SOURCES_WTF_DIR}/WTFHeaderDetection.h"
 )
 
+set(WTF_POST_BUILD_COMMAND "${CMAKE_BINARY_DIR}/DerivedSources/WTF/postBuild.cmd")
+file(WRITE "${WTF_POST_BUILD_COMMAND}" "@xcopy /y /s /d /f \"${WTF_DIR}/wtf/*.h\" \"${DERIVED_SOURCES_DIR}/ForwardingHeaders/WTF\" >nul 2>nul\n@xcopy /y /s /d /f \"${DERIVED_SOURCES_DIR}/WTF/*.h\" \"${DERIVED_SOURCES_DIR}/ForwardingHeaders/WTF\" >nul 2>nul\n")
+file(MAKE_DIRECTORY ${DERIVED_SOURCES_DIR}/ForwardingHeaders/WTF)
+
 # FIXME: This should run testOSXLevel.cmd if it is available.
 # https://bugs.webkit.org/show_bug.cgi?id=135861
 add_custom_command(
