Tools/DumpRenderTree/PlatformWin.cmake
@@ -67,6 +67,7 @@ list(APPEND DumpRenderTree_INCLUDE_DIRECTORIES
     TestNetscapePlugin/Tests
     TestNetscapePlugin/win
     TestNetscapePlugin/Tests/win
+    ${DERIVED_SOURCES_DIR}/WebKit/Interfaces
 )
 
 list(APPEND DumpRenderTree_LIBRARIES
